add allow typing feature

--- a/demo/index.html
+++ b/demo/index.html
@@ -92,6 +92,7 @@
 				<li>متمایز نشان دادن روز انتخاب شده</li>
 				<li>سینک شدن تقویم با مقدار ورودی</li>
 				<li>نمایش دکمه "برو به امروز"</li>
+				<li>افزدون / بعد از تایپ دستی</li>
 			</ul>
 		</div>
 		<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 rtl-col">
@@ -354,6 +355,7 @@
 			, highlightSelectedDay: true
 			, sync: true
 			, gotoToday: true
+			,typing:true
 		}
 		kamaDatepicker('date2', customOptions);
 
